--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.2.7.RELEASE</version>
+		<version>1.5.4.RELEASE</version>
 		<relativePath />
 	</parent>
 	
@@ -18,14 +18,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
 		</dependency>		
-		<!-- https://mvnrepository.com/artifact/net.sf.dozer/dozer -->
-<dependency>
-    <groupId>net.sf.dozer</groupId>
-    <artifactId>dozer</artifactId>
-    <version>5.5.1</version>
-</dependency>
-
-		
+		<dependency>
+   		 	<groupId>net.sf.dozer</groupId>
+    		<artifactId>dozer</artifactId>
+    		<version>5.5.1</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
@@ -42,11 +39,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-mongodb</artifactId>
 		</dependency>	
-		<dependency>
-			<groupId>de.flapdoodle.embed</groupId>
-			<artifactId>de.flapdoodle.embed.mongo</artifactId>
-			<version>1.48.2</version>
-		</dependency>
+		<!--<dependency>-->
+			<!--<groupId>de.flapdoodle.embed</groupId>-->
+			<!--<artifactId>de.flapdoodle.embed.mongo</artifactId>-->
+			<!--<version>1.48.2</version>-->
+		<!--</dependency>-->
 	
 		<!-- JSP Views -->
 		<dependency>
